# md-star

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
src/md_star/: __about__.py  cli.py  config.yaml  generator.py  requirements.txt
src/md_star/content/: Hello.md
src/md_star/templates/: base.html  index.html  post.html
