[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-star"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "chris", email = "chris1ding1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/chris1ding1/md-star#readme"
Issues = "https://github.com/chris1ding1/md-star/issues"
Source = "https://github.com/chris1ding1/md-star"

[tool.hatch.version]
path = "src/md_star/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/md_star tests}"

[tool.coverage.run]
source_pkgs = ["md_star", "tests"]
branch = true
parallel = true
omit = [
  "src/md_star/__about__.py",
]

[tool.coverage.paths]
md_star = ["src/md_star", "*/md-star/src/md_star"]
tests = ["tests", "*/md-star/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
