[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-star"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "Markdown",
    "Static Site Generator",
    "website"
]
authors = [
  { name = "chris", email = "chris1ding1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "Click",
    "Jinja2",
    "Markdown",
    "MarkupSafe",
    "python-frontmatter",
    "python-slugify",
    "PyYAML",
    "text-unidecode"
]

[project.urls]
Documentation = "https://github.com/chris1ding1/md-star#readme"
Issues = "https://github.com/chris1ding1/md-star/issues"
Source = "https://github.com/chris1ding1/md-star"

[tool.hatch.version]
path = "src/md_star/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/md_star tests}"

[tool.coverage.run]
source_pkgs = ["md_star", "tests"]
branch = true
parallel = true
omit = [
  "src/md_star/__about__.py",
]

[tool.coverage.paths]
md_star = ["src/md_star", "*/md-star/src/md_star"]
tests = ["tests", "*/md-star/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
mdstar = "md_star.cli:main"

[tool.hatch.build]
include = [
    "src/md_star/config.yaml"
    "src/md_star/content/*",
    "src/md_star/public/*",
    "src/md_star/templates/*"
]

[tool.hatch.scripts]
init = "python -m md_star.cli init"
build = "python -m md_star.generator"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
format = [
    "black .",
    "isort ."
]
lint = [
    "ruff check .",
    "mypy ."
]
